Thu Jun 24 07:34:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.mpc:
        * connectors/dds4ccm/examples/Large_Deployment/Common/Common.mpc:
        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.mpc:
        * connectors/dds4ccm/examples/Shapes/Base/Shapes_Base.mpc:
        * connectors/dds4ccm/performance-tests/DDSLatency/Base/Latency_Base.mpc:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/DDS_Sender.mpc:
        * connectors/dds4ccm/performance-tests/DDSThroughput/Base/Throughput_Base.mpc:
        * connectors/dds4ccm/performance-tests/DDSThroughput/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/performance-tests/DDSThroughput/DDS_Sender/DDS_Sender.mpc:
        * connectors/dds4ccm/performance-tests/Keyed/Base/Perf_Keyed_Test_Base.mpc:
        * connectors/dds4ccm/performance-tests/Latency/Base/LatencyTT_Test_Base.mpc:
        * connectors/dds4ccm/performance-tests/Throughput/Base/Throughput_Base.mpc:
        * connectors/dds4ccm/tests/CSLDeadline/Base/CSL_DeadlineTest_Base.mpc:
        * connectors/dds4ccm/tests/CSLQoS/Base/CSL_QoSTest_Base.mpc:
        * connectors/dds4ccm/tests/CSLSampleRejected/Base/CSL_SRTest_Base.mpc:
        * connectors/dds4ccm/tests/CSLUnexpStat/Base/CSL_USTest_Base.mpc:
        * connectors/dds4ccm/tests/CoherentUpdater/Base/CoherentUpdate_Test_Base.mpc:
        * connectors/dds4ccm/tests/CoherentWriter/Base/CoherentWrite_Test_Base.mpc:
        * connectors/dds4ccm/tests/ConnectorFilesInDiffDir/DiffDir.mpc:
        * connectors/dds4ccm/tests/ContentFilteredTopic/CFTNamesClash/Base/CFT_Test_Base.mpc:
        * connectors/dds4ccm/tests/ContentFilteredTopic/EventListener/Base/CFTLE_Test_Base.mpc:
        * connectors/dds4ccm/tests/ContentFilteredTopic/Exception/Base/Exception_Test_Base.mpc: